2 The Kubernetes Deployment Model/2.3 Using Ingress Resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: your-app.example
    http:
      paths:
      - path: /home
        backend:
          serviceName: my-service
          servicePort: 80
      - path: /shop
        backend:
          serviceName: my-other-service
          servicePort: 80
